--- a/cleaning_datasets.ipynb
+++ b/cleaning_datasets.ipynb
@@ -2,11 +2,477 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
-    "print(\"check\")"
+    "import pandas as pd"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sales_df = pd.read_excel(r\"C:\\Users\\Green Gen Tech\\Downloads\\Pizza_Sale.xlsx\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>pizza_id</th>\n",
+       "      <th>order_id</th>\n",
+       "      <th>pizza_name_id</th>\n",
+       "      <th>quantity</th>\n",
+       "      <th>order_date</th>\n",
+       "      <th>order_time</th>\n",
+       "      <th>unit_price</th>\n",
+       "      <th>total_price</th>\n",
+       "      <th>pizza_size</th>\n",
+       "      <th>pizza_category</th>\n",
+       "      <th>pizza_ingredients</th>\n",
+       "      <th>pizza_name</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>hawaiian_m</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2015-01-01 00:00:00</td>\n",
+       "      <td>11:38:36</td>\n",
+       "      <td>13.25</td>\n",
+       "      <td>13.25</td>\n",
+       "      <td>M</td>\n",
+       "      <td>Classic</td>\n",
+       "      <td>Sliced Ham, Pineapple, Mozzarella Cheese</td>\n",
+       "      <td>The Hawaiian Pizza</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2</td>\n",
+       "      <td>2</td>\n",
+       "      <td>classic_dlx_m</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2015-01-01 00:00:00</td>\n",
+       "      <td>11:57:40</td>\n",
+       "      <td>16.00</td>\n",
+       "      <td>16.00</td>\n",
+       "      <td>M</td>\n",
+       "      <td>Classic</td>\n",
+       "      <td>Pepperoni, Mushrooms, Red Onions, Red Peppers,...</td>\n",
+       "      <td>The Classic Deluxe Pizza</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>3</td>\n",
+       "      <td>2</td>\n",
+       "      <td>five_cheese_l</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2015-01-01 00:00:00</td>\n",
+       "      <td>11:57:40</td>\n",
+       "      <td>18.50</td>\n",
+       "      <td>18.50</td>\n",
+       "      <td>L</td>\n",
+       "      <td>Veggie</td>\n",
+       "      <td>Mozzarella Cheese, Provolone Cheese, Smoked Go...</td>\n",
+       "      <td>The Five Cheese Pizza</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>4</td>\n",
+       "      <td>2</td>\n",
+       "      <td>ital_supr_l</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2015-01-01 00:00:00</td>\n",
+       "      <td>11:57:40</td>\n",
+       "      <td>20.75</td>\n",
+       "      <td>20.75</td>\n",
+       "      <td>L</td>\n",
+       "      <td>Supreme</td>\n",
+       "      <td>Calabrese Salami, Capocollo, Tomatoes, Red Oni...</td>\n",
+       "      <td>The Italian Supreme Pizza</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>5</td>\n",
+       "      <td>2</td>\n",
+       "      <td>mexicana_m</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2015-01-01 00:00:00</td>\n",
+       "      <td>11:57:40</td>\n",
+       "      <td>16.00</td>\n",
+       "      <td>16.00</td>\n",
+       "      <td>M</td>\n",
+       "      <td>Veggie</td>\n",
+       "      <td>Tomatoes, Red Peppers, Jalapeno Peppers, Red O...</td>\n",
+       "      <td>The Mexicana Pizza</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   pizza_id  order_id  pizza_name_id  quantity           order_date  \\\n",
+       "0         1         1     hawaiian_m         1  2015-01-01 00:00:00   \n",
+       "1         2         2  classic_dlx_m         1  2015-01-01 00:00:00   \n",
+       "2         3         2  five_cheese_l         1  2015-01-01 00:00:00   \n",
+       "3         4         2    ital_supr_l         1  2015-01-01 00:00:00   \n",
+       "4         5         2     mexicana_m         1  2015-01-01 00:00:00   \n",
+       "\n",
+       "  order_time  unit_price  total_price pizza_size pizza_category  \\\n",
+       "0   11:38:36       13.25        13.25          M        Classic   \n",
+       "1   11:57:40       16.00        16.00          M        Classic   \n",
+       "2   11:57:40       18.50        18.50          L         Veggie   \n",
+       "3   11:57:40       20.75        20.75          L        Supreme   \n",
+       "4   11:57:40       16.00        16.00          M         Veggie   \n",
+       "\n",
+       "                                   pizza_ingredients  \\\n",
+       "0           Sliced Ham, Pineapple, Mozzarella Cheese   \n",
+       "1  Pepperoni, Mushrooms, Red Onions, Red Peppers,...   \n",
+       "2  Mozzarella Cheese, Provolone Cheese, Smoked Go...   \n",
+       "3  Calabrese Salami, Capocollo, Tomatoes, Red Oni...   \n",
+       "4  Tomatoes, Red Peppers, Jalapeno Peppers, Red O...   \n",
+       "\n",
+       "                  pizza_name  \n",
+       "0         The Hawaiian Pizza  \n",
+       "1   The Classic Deluxe Pizza  \n",
+       "2      The Five Cheese Pizza  \n",
+       "3  The Italian Supreme Pizza  \n",
+       "4         The Mexicana Pizza  "
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "sales_df.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 48620 entries, 0 to 48619\n",
+      "Data columns (total 12 columns):\n",
+      " #   Column             Non-Null Count  Dtype  \n",
+      "---  ------             --------------  -----  \n",
+      " 0   pizza_id           48620 non-null  int64  \n",
+      " 1   order_id           48620 non-null  int64  \n",
+      " 2   pizza_name_id      48604 non-null  object \n",
+      " 3   quantity           48620 non-null  int64  \n",
+      " 4   order_date         48620 non-null  object \n",
+      " 5   order_time         48620 non-null  object \n",
+      " 6   unit_price         48620 non-null  float64\n",
+      " 7   total_price        48613 non-null  float64\n",
+      " 8   pizza_size         48620 non-null  object \n",
+      " 9   pizza_category     48597 non-null  object \n",
+      " 10  pizza_ingredients  48607 non-null  object \n",
+      " 11  pizza_name         48613 non-null  object \n",
+      "dtypes: float64(2), int64(3), object(7)\n",
+      "memory usage: 4.5+ MB\n"
+     ]
+    }
+   ],
+   "source": [
+    "sales_df.info()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>pizza_id</th>\n",
+       "      <th>order_id</th>\n",
+       "      <th>quantity</th>\n",
+       "      <th>unit_price</th>\n",
+       "      <th>total_price</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>count</th>\n",
+       "      <td>48620.000000</td>\n",
+       "      <td>48620.000000</td>\n",
+       "      <td>48620.000000</td>\n",
+       "      <td>48620.000000</td>\n",
+       "      <td>48613.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>mean</th>\n",
+       "      <td>24310.500000</td>\n",
+       "      <td>10701.479761</td>\n",
+       "      <td>1.019622</td>\n",
+       "      <td>16.494132</td>\n",
+       "      <td>16.821494</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>std</th>\n",
+       "      <td>14035.529381</td>\n",
+       "      <td>6180.119770</td>\n",
+       "      <td>0.143077</td>\n",
+       "      <td>3.621789</td>\n",
+       "      <td>4.437520</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>min</th>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>9.750000</td>\n",
+       "      <td>9.750000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>25%</th>\n",
+       "      <td>12155.750000</td>\n",
+       "      <td>5337.000000</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>12.750000</td>\n",
+       "      <td>12.750000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>50%</th>\n",
+       "      <td>24310.500000</td>\n",
+       "      <td>10682.500000</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>16.500000</td>\n",
+       "      <td>16.500000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>75%</th>\n",
+       "      <td>36465.250000</td>\n",
+       "      <td>16100.000000</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>20.250000</td>\n",
+       "      <td>20.500000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>max</th>\n",
+       "      <td>48620.000000</td>\n",
+       "      <td>21350.000000</td>\n",
+       "      <td>4.000000</td>\n",
+       "      <td>35.950000</td>\n",
+       "      <td>83.000000</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "           pizza_id      order_id      quantity    unit_price   total_price\n",
+       "count  48620.000000  48620.000000  48620.000000  48620.000000  48613.000000\n",
+       "mean   24310.500000  10701.479761      1.019622     16.494132     16.821494\n",
+       "std    14035.529381   6180.119770      0.143077      3.621789      4.437520\n",
+       "min        1.000000      1.000000      1.000000      9.750000      9.750000\n",
+       "25%    12155.750000   5337.000000      1.000000     12.750000     12.750000\n",
+       "50%    24310.500000  10682.500000      1.000000     16.500000     16.500000\n",
+       "75%    36465.250000  16100.000000      1.000000     20.250000     20.500000\n",
+       "max    48620.000000  21350.000000      4.000000     35.950000     83.000000"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "sales_df.describe()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "pizza_id              0\n",
+       "order_id              0\n",
+       "pizza_name_id        16\n",
+       "quantity              0\n",
+       "order_date            0\n",
+       "order_time            0\n",
+       "unit_price            0\n",
+       "total_price           7\n",
+       "pizza_size            0\n",
+       "pizza_category       23\n",
+       "pizza_ingredients    13\n",
+       "pizza_name            7\n",
+       "dtype: int64"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "sales_df.isnull().sum()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Empty DataFrame\n",
+      "Columns: [pizza_id, order_id, pizza_name_id, quantity, order_date, order_time, unit_price, total_price, pizza_size, pizza_category, pizza_ingredients, pizza_name]\n",
+      "Index: []\n"
+     ]
+    }
+   ],
+   "source": [
+    "rows_with_all_nulls = sales_df[sales_df.isnull().all(axis=1)]\n",
+    "print(rows_with_all_nulls)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "     pizza_id  order_id pizza_name_id  quantity           order_date  \\\n",
+      "36         37        15           NaN         1  2015-01-01 00:00:00   \n",
+      "37         38        15           NaN         1  2015-01-01 00:00:00   \n",
+      "38         39        15           NaN         1  2015-01-01 00:00:00   \n",
+      "39         40        16           NaN         1  2015-01-01 00:00:00   \n",
+      "40         41        16           NaN         1  2015-01-01 00:00:00   \n",
+      "41         42        16           NaN         1  2015-01-01 00:00:00   \n",
+      "309       310       131           NaN         1  2015-02-01 00:00:00   \n",
+      "310       311       131           NaN         1  2015-02-01 00:00:00   \n",
+      "311       312       132           NaN         1  2015-02-01 00:00:00   \n",
+      "312       313       133           NaN         1  2015-02-01 00:00:00   \n",
+      "313       314       133           NaN         1  2015-02-01 00:00:00   \n",
+      "415       416       175           NaN         1  2015-03-01 00:00:00   \n",
+      "416       417       176           NaN         1  2015-03-01 00:00:00   \n",
+      "417       418       176           NaN         1  2015-03-01 00:00:00   \n",
+      "418       419       177           NaN         1  2015-03-01 00:00:00   \n",
+      "419       420       177           NaN         1  2015-03-01 00:00:00   \n",
+      "\n",
+      "    order_time  unit_price  total_price pizza_size pizza_category  \\\n",
+      "36    13:33:00       18.50        18.50          L         Veggie   \n",
+      "37    13:33:00       20.75        20.75          L        Supreme   \n",
+      "38    13:33:00       12.00        12.00          S        Classic   \n",
+      "39    13:34:07       17.95        17.95          L         Veggie   \n",
+      "40    13:34:07       12.00        12.00          S        Classic   \n",
+      "41    13:34:07       20.75        20.75          L        Chicken   \n",
+      "309   21:33:10       12.00        12.00          S         Veggie   \n",
+      "310   21:33:10       12.50        12.50          S        Supreme   \n",
+      "311   21:42:45        9.75         9.75          S        Classic   \n",
+      "312   22:00:17       20.75        20.75          L        Chicken   \n",
+      "313   22:00:17       16.50        16.50          L        Classic   \n",
+      "415   17:50:51       20.75        20.75          L        Supreme   \n",
+      "416   17:51:57       20.75        20.75          L        Chicken   \n",
+      "417   17:51:57       16.50        16.50          M        Supreme   \n",
+      "418   17:54:36       12.00        12.00          S        Classic   \n",
+      "419   17:54:36       20.75        20.75          L        Chicken   \n",
+      "\n",
+      "                                     pizza_ingredients  \\\n",
+      "36   Mozzarella Cheese, Provolone Cheese, Smoked Go...   \n",
+      "37   Soppressata Salami, Fontina Cheese, Mozzarella...   \n",
+      "38   Kalamata Olives, Feta Cheese, Tomatoes, Garlic...   \n",
+      "39   Ricotta Cheese, Gorgonzola Piccante Cheese, Mo...   \n",
+      "40   Tomatoes, Anchovies, Green Olives, Red Onions,...   \n",
+      "41   Chicken, Pineapple, Tomatoes, Red Peppers, Tha...   \n",
+      "309  Spinach, Mushrooms, Tomatoes, Green Olives, Fe...   \n",
+      "310  Spinach, Red Onions, Pepperoni, Tomatoes, Arti...   \n",
+      "311                       Mozzarella Cheese, Pepperoni   \n",
+      "312  Barbecued Chicken, Red Peppers, Green Peppers,...   \n",
+      "313           Sliced Ham, Pineapple, Mozzarella Cheese   \n",
+      "415  Calabrese Salami, Capocollo, Tomatoes, Red Oni...   \n",
+      "416  Chicken, Artichoke, Spinach, Garlic, Jalapeno ...   \n",
+      "417  Genoa Salami, Capocollo, Pepperoni, Tomatoes, ...   \n",
+      "418  Tomatoes, Anchovies, Green Olives, Red Onions,...   \n",
+      "419  Chicken, Pineapple, Tomatoes, Red Peppers, Tha...   \n",
+      "\n",
+      "                       pizza_name  \n",
+      "36          The Five Cheese Pizza  \n",
+      "37          The Soppressata Pizza  \n",
+      "38                The Greek Pizza  \n",
+      "39          The Four Cheese Pizza  \n",
+      "40           The Napolitana Pizza  \n",
+      "41         The Thai Chicken Pizza  \n",
+      "309        The Green Garden Pizza  \n",
+      "310     The Spinach Supreme Pizza  \n",
+      "311           The Pepperoni Pizza  \n",
+      "312    The Barbecue Chicken Pizza  \n",
+      "313            The Hawaiian Pizza  \n",
+      "415     The Italian Supreme Pizza  \n",
+      "416  The California Chicken Pizza  \n",
+      "417       The Pepper Salami Pizza  \n",
+      "418          The Napolitana Pizza  \n",
+      "419        The Thai Chicken Pizza  \n"
+     ]
+    }
+   ],
+   "source": [
+    "rows_with_nulls_in_col = sales_df[sales_df['pizza_name_id'].isnull()] \n",
+    "print(rows_with_nulls_in_col)\n"
    ]
   }
  ],
@@ -17,7 +483,15 @@
    "name": "python3"
   },
   "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
    "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
    "version": "3.12.3"
   }
  },
