--- a/cleaning_datasets.ipynb
+++ b/cleaning_datasets.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 84,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 85,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -384,7 +384,7 @@
    ],
    "source": [
     "rows_with_all_nulls = sales_df[sales_df.isnull().all(axis=1)]\n",
-    "print(rows_with_all_nulls)\n"
+    "print(rows_with_all_nulls)"
    ]
   },
   {
@@ -472,7 +472,7 @@
    ],
    "source": [
     "rows_with_nulls_in_col = sales_df[sales_df['pizza_name_id'].isnull()] \n",
-    "print(rows_with_nulls_in_col)\n"
+    "print(rows_with_nulls_in_col)"
    ]
   },
   {
@@ -974,7 +974,7 @@
    ],
    "source": [
     "rows_with_nulls_in_col = sales_df[sales_df['pizza_category'].isnull()] \n",
-    "rows_with_nulls_in_col\n"
+    "rows_with_nulls_in_col"
    ]
   },
   {
@@ -1465,10 +1465,312 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 86,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "sales_df['order_date'] = pd.to_datetime(sales_df['order_date'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 77,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0       2015-01-01\n",
+      "1       2015-01-01\n",
+      "2       2015-01-01\n",
+      "3       2015-01-01\n",
+      "4       2015-01-01\n",
+      "           ...    \n",
+      "48615   2015-12-31\n",
+      "48616   2015-12-31\n",
+      "48617   2015-12-31\n",
+      "48618   2015-12-31\n",
+      "48619   2015-12-31\n",
+      "Name: order_date, Length: 48620, dtype: datetime64[ns]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(sales_df['order_date'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 93,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Convert order_time to datetime with a specified format\n",
+    "sales_df['order_time'] = pd.to_datetime(sales_df['order_time'], format='%H:%M:%S', errors='coerce')\n",
+    "\n",
+    "# Extract only the time portion, if conversion was successful\n",
+    "sales_df['order_time'] = sales_df['order_time'].dt.time\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 94,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0        11:38:36\n",
+      "1        11:57:40\n",
+      "2        11:57:40\n",
+      "3        11:57:40\n",
+      "4        11:57:40\n",
+      "           ...   \n",
+      "48615    21:23:10\n",
+      "48616    21:23:10\n",
+      "48617    21:23:10\n",
+      "48618    22:09:54\n",
+      "48619    23:02:05\n",
+      "Name: order_time, Length: 48620, dtype: object\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(sales_df[\"order_time\"])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 95,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Fill missing pizza_category based on most frequent category for each pizza_name\n",
+    "sales_df['pizza_category'] = sales_df.groupby('pizza_name')['pizza_category'] \\\n",
+    "    .transform(lambda x: x.fillna(x.mode().iloc[0]) if not x.mode().empty else x)\n",
+    "\n",
+    "# Now fill remaining missing pizza_category based on pizza_name_id if available\n",
+    "sales_df['pizza_category'] = sales_df.groupby('pizza_name_id')['pizza_category'] \\\n",
+    "    .transform(lambda x: x.fillna(x.mode().iloc[0]) if not x.mode().empty else x).where(sales_df['pizza_category'].isnull(), sales_df['pizza_category'])\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 60,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0"
+      ]
+     },
+     "execution_count": 60,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "sales_df['pizza_category'].isnull().sum()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 96,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Fill missing pizza_category based on most frequent category for each pizza_name\n",
+    "sales_df['pizza_name'] = sales_df.groupby('pizza_category')['pizza_name'] \\\n",
+    "    .transform(lambda x: x.fillna(x.mode().iloc[0]) if not x.mode().empty else x)\n",
+    "\n",
+    "# Now fill remaining missing pizza_category based on pizza_name_id if available\n",
+    "sales_df['pizza_name'] = sales_df.groupby('pizza_name_id')['pizza_name'] \\\n",
+    "    .transform(lambda x: x.fillna(x.mode().iloc[0]) if not x.mode().empty else x).where(sales_df['pizza_name'].isnull(), sales_df['pizza_name'])\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 62,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0"
+      ]
+     },
+     "execution_count": 62,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "sales_df['pizza_name'].isnull().sum()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 97,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Fill missing pizza_category based on most frequent category for each pizza_name\n",
+    "sales_df['pizza_name_id'] = sales_df.groupby('pizza_category')['pizza_name'] \\\n",
+    "    .transform(lambda x: x.fillna(x.mode().iloc[0]) if not x.mode().empty else x)\n",
+    "\n",
+    "# Now fill remaining missing pizza_category based on pizza_name_id if available\n",
+    "sales_df['pizza_name_id'] = sales_df.groupby('pizza_ingredients')['pizza_name'] \\\n",
+    "    .transform(lambda x: x.fillna(x.mode().iloc[0]) if not x.mode().empty else x).where(sales_df['pizza_name_id'].isnull(), sales_df['pizza_name_id'])\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 64,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0"
+      ]
+     },
+     "execution_count": 64,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "sales_df['pizza_name_id'].isnull().sum()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 98,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Fill missing pizza_category based on most frequent category for each pizza_name\n",
+    "sales_df['pizza_ingredients'] = sales_df.groupby('pizza_category')['pizza_name'] \\\n",
+    "    .transform(lambda x: x.fillna(x.mode().iloc[0]) if not x.mode().empty else x)\n",
+    "\n",
+    "# Now fill remaining missing pizza_category based on pizza_name_id if available\n",
+    "sales_df['pizza_ingredients'] = sales_df.groupby('pizza_ingredients')['pizza_name'] \\\n",
+    "    .transform(lambda x: x.fillna(x.mode().iloc[0]) if not x.mode().empty else x).where(sales_df['pizza_ingredients'].isnull(), sales_df['pizza_ingredients'])\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 66,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0"
+      ]
+     },
+     "execution_count": 66,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "sales_df['pizza_ingredients'].isnull().sum()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 99,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 1. Calculate total_price if quantity and unit_price are available\n",
+    "sales_df['total_price'] = sales_df['total_price'].fillna(sales_df['quantity'] * sales_df['unit_price'])\n",
+    "\n",
+    "# 2. Fill remaining missing total_price based on the average total_price for each pizza_name and pizza_category group\n",
+    "sales_df['total_price'] = sales_df.groupby(['pizza_name', 'pizza_category'])['total_price'] \\\n",
+    "                                  .transform(lambda x: x.fillna(x.mean()))\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 100,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "pizza_id             0\n",
+       "order_id             0\n",
+       "pizza_name_id        0\n",
+       "quantity             0\n",
+       "order_date           0\n",
+       "order_time           0\n",
+       "unit_price           0\n",
+       "total_price          0\n",
+       "pizza_size           0\n",
+       "pizza_category       0\n",
+       "pizza_ingredients    0\n",
+       "pizza_name           0\n",
+       "dtype: int64"
+      ]
+     },
+     "execution_count": 100,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "sales_df.isnull().sum()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 101,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 48620 entries, 0 to 48619\n",
+      "Data columns (total 12 columns):\n",
+      " #   Column             Non-Null Count  Dtype         \n",
+      "---  ------             --------------  -----         \n",
+      " 0   pizza_id           48620 non-null  int64         \n",
+      " 1   order_id           48620 non-null  int64         \n",
+      " 2   pizza_name_id      48620 non-null  object        \n",
+      " 3   quantity           48620 non-null  int64         \n",
+      " 4   order_date         48620 non-null  datetime64[ns]\n",
+      " 5   order_time         48620 non-null  object        \n",
+      " 6   unit_price         48620 non-null  float64       \n",
+      " 7   total_price        48620 non-null  float64       \n",
+      " 8   pizza_size         48620 non-null  object        \n",
+      " 9   pizza_category     48620 non-null  object        \n",
+      " 10  pizza_ingredients  48620 non-null  object        \n",
+      " 11  pizza_name         48620 non-null  object        \n",
+      "dtypes: datetime64[ns](1), float64(2), int64(3), object(6)\n",
+      "memory usage: 4.5+ MB\n"
+     ]
+    }
+   ],
+   "source": [
+    "sales_df.info()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 102,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Save the preprocessed DataFrame to an Excel file\n",
+    "sales_df.to_excel(\"preprocessed_sales_data.xlsx\", index=False)\n"
+   ]
   }
  ],
  "metadata": {
