--- a/cleaning_datasets.ipynb
+++ b/cleaning_datasets.ipynb
@@ -6,10 +6,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import pandas as pd\n",
-    "import matplotlib.pyplot as plt\n",
-    "import seaborn as sns\n",
-    "import numpy as np"
+    "import pandas as pd"
    ]
   },
   {
